--- a/movie-app/src/App.css
+++ b/movie-app/src/App.css
@@ -4,12 +4,8 @@
 }
 
 html {
-  height: 100%;
-  background: hsla(204, 100%, 81%, 1);
-  background: linear-gradient(180deg, hsla(204, 100%, 81%, 1) 0%, hsla(158, 100%, 88%, 1) 100%);
-  /* background: -moz-linear-gradient(180deg, hsla(204, 100%, 81%, 1) 0%, hsla(158, 100%, 88%, 1) 100%); */
-  /* background: -webkit-linear-gradient(180deg, hsla(204, 100%, 81%, 1) 0%, hsla(158, 100%, 88%, 1) 100%); */
-  filter: progid: DXImageTransform.Microsoft.gradient( startColorstr="#9ED8FF", endColorstr="#C1FFE8", GradientType=1 );
+  height: 100vh;
+  background: linear-gradient(180deg, hsl(204deg, 100%, 81%) 0%, hsl(158deg, 100%, 88%) 100%);
 }
 
 .Nav-bar {
@@ -18,24 +14,92 @@ html {
   padding: 0;
   width: 100vw;
   height: 2.5rem;
+  position: relative;
+  display: flex;
+  align-items: center;
+  box-shadow: 0 2px 2px 2px rgba(9, 9, 9, 0.23);
 }
-
-.Nav-bar > ul > li {
-  background-color: rgba(0, 0, 0, 0.555);
-  display: inline-block;
+.Nav-bar .nav-menu ul {
+  display: flex;
+  align-items: center;
+  align-content: center;
+  padding: 0;
+  list-style: none;
+}
+.Nav-bar .nav-menu ul li {
+  list-style: none;
+  text-decoration: none;
   width: 10rem;
   height: 2.5rem;
-  list-style: none;
+  background-color: rgba(0, 0, 0, 0.384);
   text-align: center;
-
-} 
-
-.Nav-bar > ul > li:hover {
-  color: white;
-  background-color: rgba(0, 0, 0, 0.336);
+  display: inline-block;
 }
-
-.Nav-bar > ul > li > a {
-text-decoration: none;
-color: white;
+.Nav-bar .nav-menu ul li a {
+  text-decoration: none;
+  display: block;
+  width: 100%;
+  color: rgb(255, 255, 255);
 }
+.Nav-bar .nav-menu ul li:hover {
+  background-color: rgb(0, 0, 0);
+}
+.Nav-bar .Nav-mob {
+  height: 2.5rem;
+  width: 5rem;
+  border-radius: 10%;
+  background-color: rgb(0, 0, 0);
+  cursor: pointer;
+  transition: background-color 0.2s ease-in-out;
+  position: absolute;
+  top: 50%;
+  right: 25px;
+  transform: translateY(-50%);
+  display: none;
+}
+.Nav-bar .Nav-mob:hover {
+  background-color: rgba(0, 0, 0, 0.384);
+}
+@media (max-width: 760px) {
+  .Nav-bar .Nav-mob {
+    display: block;
+  }
+  .Nav-bar .nav-menu ul {
+    flex-direction: column;
+    position: absolute;
+    left: 0;
+    width: 100%;
+    height: auto;
+    background-color: rgba(0, 0, 0, 0.384);
+    display: none;
+  }
+  .Nav-bar .nav-menu ul li {
+    text-align: center;
+  }
+  .Nav-bar .nav-menu ul li a {
+    width: 100%;
+  }
+  .Nav-bar .nav-menu-e ul {
+    display: block;
+    flex-direction: column;
+    position: absolute;
+    top: 2.55rem;
+    left: 0;
+    width: 100%;
+    height: auto;
+    background-color: rgba(0, 0, 0, 0.384);
+  }
+  .Nav-bar .nav-menu-e ul li {
+    text-align: center;
+    list-style: none;
+  }
+  .Nav-bar .nav-menu-e ul li a {
+    text-decoration: none;
+    display: block;
+    width: 100%;
+    color: rgb(255, 255, 255);
+  }
+  .Nav-bar .nav-menu-e ul li:hover {
+    background-color: rgb(0, 0, 0);
+  }
+}/*# sourceMappingURL=App.css.map */
