--- a/movie-app/src/App.css
+++ b/movie-app/src/App.css
@@ -4,12 +4,11 @@
 }
 
 html {
-  height: 100vh;
-  background: linear-gradient(180deg, hsl(204deg, 100%, 81%) 0%, hsl(158deg, 100%, 88%) 100%);
+  background: linear-gradient(0deg, rgb(255, 196, 0) 0%, rgb(255, 246, 134) 100%);
 }
 
 .Nav-bar {
-  background-color: rgba(0, 0, 0, 0.384);
+  background-color: rgb(68, 68, 68);
   margin: 0;
   padding: 0;
   width: 100vw;
@@ -25,13 +24,14 @@ html {
   align-content: center;
   padding: 0;
   list-style: none;
+  height: 100%;
 }
 .Nav-bar .nav-menu ul li {
   list-style: none;
   text-decoration: none;
   width: 10rem;
   height: 2.5rem;
-  background-color: rgba(0, 0, 0, 0.384);
+  background-color: rgb(68, 68, 68);
   text-align: center;
   display: inline-block;
 }
@@ -42,13 +42,13 @@ html {
   color: rgb(255, 255, 255);
 }
 .Nav-bar .nav-menu ul li:hover {
-  background-color: rgb(0, 0, 0);
+  background-color: rgba(0, 0, 0, 0.575);
 }
 .Nav-bar .Nav-mob {
   height: 2.5rem;
-  width: 5rem;
+  width: 3rem;
   border-radius: 10%;
-  background-color: rgb(0, 0, 0);
+  background-color: rgb(68, 68, 68);
   cursor: pointer;
   transition: background-color 0.2s ease-in-out;
   position: absolute;
@@ -58,11 +58,22 @@ html {
   display: none;
 }
 .Nav-bar .Nav-mob:hover {
-  background-color: rgba(0, 0, 0, 0.384);
+  background-color: rgba(0, 0, 0, 0.575);
 }
 @media (max-width: 760px) {
   .Nav-bar .Nav-mob {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    align-content: center;
+    background-color: rgba(0, 0, 0, 0.575);
+  }
+  .Nav-bar .Nav-mob span {
+    width: 80%;
+    height: 3px;
     display: block;
+    margin-top: 0.5rem;
+    background-color: rgb(255, 255, 255);
   }
   .Nav-bar .nav-menu ul {
     flex-direction: column;
@@ -70,7 +81,7 @@ html {
     left: 0;
     width: 100%;
     height: auto;
-    background-color: rgba(0, 0, 0, 0.384);
+    background-color: rgb(68, 68, 68);
     display: none;
   }
   .Nav-bar .nav-menu ul li {
@@ -83,15 +94,16 @@ html {
     display: block;
     flex-direction: column;
     position: absolute;
-    top: 2.55rem;
+    top: 2.5rem;
     left: 0;
     width: 100%;
     height: auto;
-    background-color: rgba(0, 0, 0, 0.384);
+    background-color: rgb(68, 68, 68);
   }
   .Nav-bar .nav-menu-e ul li {
     text-align: center;
     list-style: none;
+    height: 2.5rem;
   }
   .Nav-bar .nav-menu-e ul li a {
     text-decoration: none;
@@ -100,6 +112,6 @@ html {
     color: rgb(255, 255, 255);
   }
   .Nav-bar .nav-menu-e ul li:hover {
-    background-color: rgb(0, 0, 0);
+    background-color: rgba(0, 0, 0, 0.575);
   }
 }/*# sourceMappingURL=App.css.map */
