--- a/movie-app/src/App.scss
+++ b/movie-app/src/App.scss
@@ -1,6 +1,7 @@
+$colorBack1: linear-gradient(0deg, rgba(255,196,0,1) 0%, rgba(255,246,134,1) 100%);
 $colorBack:  linear-gradient(180deg, hsla(204, 100%, 81%, 1) 0%, hsla(158, 100%, 88%, 1) 100%);
-$colorNavLi: rgb(0, 0, 0);
-$colorNav: rgba(0, 0, 0, 0.384);
+$colorNavLi: rgb(68, 68, 68);
+$colorNav: rgba(0, 0, 0, 0.575);
 $textColorLightColorBackground: rgb(0,0,0);
 $textColorDarkColorBackground: rgb(255, 255, 255);
 
@@ -15,12 +16,12 @@ $normalWidth: 2200px;
   }
   
   html {
-    height: 100vh;
-    background: $colorBack;
+    // height: 100vh;
+    background: $colorBack1;
   }
   
   .Nav-bar {
-    background-color: $colorNav;
+    background-color: $colorNavLi;
     margin: 0;
     padding: 0;
     width: 100vw;
@@ -39,13 +40,13 @@ $normalWidth: 2200px;
             align-content: center;
             padding: 0;
             list-style: none;
-            // height: 100%;
+            height: 100%;
             li{
                 list-style: none;
                 text-decoration: none;
                 width: 10rem;
                 height: 2.5rem;
-                background-color: $colorNav;
+                background-color: $colorNavLi;
                 text-align: center;
                 display: inline-block;
                 a{
@@ -55,7 +56,7 @@ $normalWidth: 2200px;
                     color: $textColorDarkColorBackground;
                 }
                 &:hover{
-                    background-color: $colorNavLi;
+                    background-color: $colorNav;
                 }
             }
         }
@@ -63,7 +64,7 @@ $normalWidth: 2200px;
 
     .Nav-mob{
         height: 2.5rem;
-        width: 5rem;
+        width: 3rem;
         border-radius: 10%;
         background-color: $colorNavLi;
         cursor: pointer;
@@ -80,7 +81,18 @@ $normalWidth: 2200px;
 
     @media (max-width: $tabletWidth) {
         .Nav-mob{
-            display: block;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            align-content: center;
+            background-color: $colorNav;
+            span{
+                width: 80%;
+                height: 3px;
+                display: block;
+                margin-top: 0.5rem;
+                background-color: $textColorDarkColorBackground;
+            }
         }
 
         .nav-menu{
@@ -90,39 +102,44 @@ $normalWidth: 2200px;
                 left: 0;
                 width: 100%;
                 height: auto;
-                background-color: $colorNav;
+                background-color: $colorNavLi;
                 display: none;
                 li{
                     text-align: center;
+                    // height: 2.5rem;
                     a{
                         width: 100%;
                     }
                 }
             }
         }
+
         .nav-menu-e ul{
             display:block;
             flex-direction: column;
             position: absolute;
-            top: 2.55rem;
+            top: 2.5rem;
             left: 0;
             width: 100%;
             height: auto;
-            background-color: $colorNav;
+            background-color: $colorNavLi;
             li{
                 text-align: center;
                 list-style: none;
+                height: 2.5rem;
                 a{
                     text-decoration: none;
                     display: block;
                     width: 100%;
                     color: $textColorDarkColorBackground;
+                   
                 }
                 &:hover{
-                    background-color: $colorNavLi;
+                    background-color: $colorNav;
                 }
             }
         }
+        
     }
   }
    
