--- a/movie-app/src/Component/main-css.scss
+++ b/movie-app/src/Component/main-css.scss
@@ -12,8 +12,6 @@ body {
 }
 
 .container{
-    // width: auto;
-    // border: 1px solid black;
     display: grid;
     grid-template-columns: 1fr 1fr 1fr 1fr;
     @media (max-width: 860px) {
@@ -28,11 +26,12 @@ body {
 
 .container > .item > div > img{
     width: 200px;
+    min-height: 300px;
+
 }
 
 .container > .item > div {
     text-align: center;
-
 }
 
 .main-page{
@@ -47,6 +46,7 @@ body {
 .main-page > input{
     border: none;
     border-radius: 10px;
+    text-align: center;
     width: 400px;
     height: 2rem;
     margin: 2rem;
@@ -54,7 +54,9 @@ body {
     &::placeholder{
         text-align: center;
     }
-    
+    @media (max-width: 440px) {
+        width: 80vw;
+    }
 }
 
 .item{
